// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getWrappedScreen  render should render success with disableScroll true 1`] = `
<TaroProvider
  Taro={
    Object {
      "hideNavigationBarLoading": [Function],
      "setNavigationBarColor": [Function],
      "setNavigationBarTitle": [Function],
      "showNavigationBarLoading": [Function],
    }
  }
  disableScroll={true}
  enablePullDownRefresh={true}
>
  <HomeScreen />
</TaroProvider>
`;

exports[`getWrappedScreen  render should render success with globalNavigationOptions 1`] = `
<TaroProvider
  Taro={
    Object {
      "hideNavigationBarLoading": [Function],
      "setNavigationBarColor": [Function],
      "setNavigationBarTitle": [Function],
      "showNavigationBarLoading": [Function],
    }
  }
  enablePullDownRefresh={true}
>
  <HomeScreen />
</TaroProvider>
`;

exports[`getWrappedScreen  render should render success without globalNavigationOptions 1`] = `
<TaroProvider
  Taro={
    Object {
      "hideNavigationBarLoading": [Function],
      "setNavigationBarColor": [Function],
      "setNavigationBarTitle": [Function],
      "showNavigationBarLoading": [Function],
    }
  }
  enablePullDownRefresh={true}
>
  <HomeScreen />
</TaroProvider>
`;

exports[`getWrappedScreen should render success with globalNavigationOptions 1`] = `
<TaroProvider
  Taro={
    Object {
      "hideNavigationBarLoading": [Function],
      "setNavigationBarColor": [Function],
      "setNavigationBarTitle": [Function],
      "showNavigationBarLoading": [Function],
    }
  }
  enablePullDownRefresh={false}
>
  <HomeScreen />
</TaroProvider>
`;

exports[`getWrappedScreen should render success without globalNavigationOptions 1`] = `
<TaroProvider
  Taro={
    Object {
      "hideNavigationBarLoading": [Function],
      "setNavigationBarColor": [Function],
      "setNavigationBarTitle": [Function],
      "showNavigationBarLoading": [Function],
    }
  }
  enablePullDownRefresh={false}
>
  <HomeScreen />
</TaroProvider>
`;
